examples/test/testpolicy15583.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15583
  namespace: namespace217
spec:
  podSelector:
    matchLabels:
      key19: value46
      key24: value35
      key47: value11
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key19: value27
          key9: value42
          key31: value41
      podSelector:
        matchLabels:
          key33: value10
